[gd_scene load_steps=9 format=2]

[ext_resource path="res://Misc/Fonts/Mostwasted.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Misc/Themes/Main.tres" type="Theme" id=2]
[ext_resource path="res://Screens/Menu/Menu.gd" type="Script" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="DynamicFont" id=2]
size = 64
outline_size = 10
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 1, 0.764706, 0, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0, 0, 0, 0 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Main" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Main"]
margin_left = 324.0
margin_top = 155.0
margin_right = 700.0
margin_bottom = 445.0
custom_constants/separation = 50
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="Main/VBoxContainer"]
margin_right = 376.0
margin_bottom = 70.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 0.764706, 0, 1 )
text = "BAD STARS 2"
align = 1

[node name="x" type="Button" parent="Main/VBoxContainer/Title"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 20.0
margin_right = 100.0
margin_bottom = 58.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Y" type="Button" parent="Main/VBoxContainer/Title"]
anchor_left = 0.915
anchor_top = 0.8
anchor_right = 1.016
anchor_bottom = 0.9
margin_left = 37.96
margin_top = -7.15256e-07
margin_right = 6.98399
margin_bottom = 31.0
rect_rotation = 90.0
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
toggle_mode = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Main/VBoxContainer"]
margin_top = 120.0
margin_right = 376.0
margin_bottom = 290.0
custom_constants/separation = 10

[node name="Play" type="Button" parent="Main/VBoxContainer/VBoxContainer"]
margin_right = 376.0
margin_bottom = 50.0
rect_min_size = Vector2( 100, 50 )
text = "Play"

[node name="Options" type="Button" parent="Main/VBoxContainer/VBoxContainer"]
margin_top = 60.0
margin_right = 376.0
margin_bottom = 110.0
rect_min_size = Vector2( 100, 50 )
text = "Options"

[node name="Quit" type="Button" parent="Main/VBoxContainer/VBoxContainer"]
margin_top = 120.0
margin_right = 376.0
margin_bottom = 170.0
rect_min_size = Vector2( 100, 50 )
text = "Quit"

[node name="Play" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Back" type="Button" parent="Play"]
margin_left = 20.0
margin_top = 20.0
margin_right = 40.0
margin_bottom = 38.0
rect_min_size = Vector2( 100, 40 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="Play"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Play/CenterContainer"]
margin_left = 362.0
margin_top = 172.0
margin_right = 662.0
margin_bottom = 428.0
custom_constants/separation = 20

[node name="Name" type="LineEdit" parent="Play/CenterContainer/VBoxContainer"]
margin_right = 300.0
margin_bottom = 48.0
text = "EpicDude54"
max_length = 14
placeholder_text = "Username"

[node name="Host" type="Button" parent="Play/CenterContainer/VBoxContainer"]
margin_top = 68.0
margin_right = 300.0
margin_bottom = 118.0
rect_min_size = Vector2( 200, 50 )
text = "Host Game"

[node name="Join" type="Button" parent="Play/CenterContainer/VBoxContainer"]
margin_top = 138.0
margin_right = 300.0
margin_bottom = 188.0
rect_min_size = Vector2( 200, 50 )
text = "Join Game"

[node name="IP" type="LineEdit" parent="Play/CenterContainer/VBoxContainer"]
margin_top = 208.0
margin_right = 300.0
margin_bottom = 256.0
rect_min_size = Vector2( 300, 0 )
placeholder_text = "IP Address"

[node name="Timer" type="Timer" parent="."]

[node name="QuitMessage" type="Panel" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 3 )

[node name="CenterContainer" type="CenterContainer" parent="QuitMessage"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Loser" type="Label" parent="QuitMessage/CenterContainer"]
margin_left = 471.0
margin_top = 281.0
margin_right = 552.0
margin_bottom = 319.0
text = "Loser"
[connection signal="pressed" from="Main/VBoxContainer/Title/x" to="." method="_on_x_pressed"]
[connection signal="button_down" from="Main/VBoxContainer/Title/Y" to="." method="_on_Y_button_down"]
[connection signal="pressed" from="Main/VBoxContainer/VBoxContainer/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="Main/VBoxContainer/VBoxContainer/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="Main/VBoxContainer/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="Play/Back" to="." method="_on_Back_pressed"]
[connection signal="text_changed" from="Play/CenterContainer/VBoxContainer/Name" to="." method="_on_Name_text_changed"]
[connection signal="pressed" from="Play/CenterContainer/VBoxContainer/Host" to="." method="_on_Host_pressed"]
[connection signal="pressed" from="Play/CenterContainer/VBoxContainer/Join" to="." method="_on_Join_pressed"]
